# Serial-Echo

./: CMakeLists.txt  Settings.h  main.cpp
Libs/EchoSerial/: CMakeLists.txt  EchoSerial.cpp  EchoSerial.h
Libs/Modem/: CMakeLists.txt  rn2483.cpp  rn2483.h  sara_n210.cpp  sara_n210.h
Libs/Serial/: CMakeLists.txt  Serial.cpp  Serial.h
